<package>
  <name>link_waypoint</name>

  <version>0.0.1</version>
  <description>
    waypoint for LINK
  </description>
  <maintainer email="_@neubility.co.kr">neubility</maintainer>

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>link_navigation</run_depend>
  <run_depend>slam_gmapping</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <metapackage/>
  </export>
</package>
