<package>
  <name>link_waypoint_nav</name>

  <version>0.0.1</version>
  <description>
    waypoint for LINK
  </description>
  <maintainer email="_@neubility.co.kr">neubility</maintainer>

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
 


  <export>
  </export>
</package>
